input file glosario

--- a/tecolotl-web/src/main/webapp/colaborador/detalle-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/colaborador/detalle-actividad.xhtml
@@ -4,12 +4,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+        class="js">
 
 <h:head>
     <title>Dashboard</title>
     <h:outputStylesheet library="css" name="uikit.css"/>
     <h:outputStylesheet library="css" name="tablas.css"/>
+    <h:outputStylesheet library="css" name="/colaborador/detalle-actividad.css"/>
+    <h:outputStylesheet library="css" name="/colaborador/glosario.css"/>
 </h:head>
 
 <h:body>
@@ -93,60 +97,64 @@
             <div class="uk-modal-header">
                 <h2 class="uk-modal-title">Nuevo Glosario</h2>
             </div>
-            <h:form styleClass="uk-form-stacked">
-                <div class="uk-modal-body">
-                    <h:panelGroup layout="block" styleClass="uk-grid" pt:uk-grid="">
-                       <div class="uk-width-auto">
-                            <h:panelGroup layout="block" styleClass="js-upload " pt:uk-form-custom="" >
-                                <label class="uk-form-label" for="imagen">Imagen</label>
-                                <h:inputFile  multiple="" id="imagen" value="#{detalleActividadControlador.glosarioModelo.imagen}"/>
-                                <button class="uk-button uk-button-default" type="button" tabindex="-1">Cargar Imagen</button>
-                            </h:panelGroup>
-                       </div>
-                        <div class="uk-width-expand">
-                            <label class="uk-form-label" for="form-ClaseGlosario">Clase Glosario</label>
-                            <div class="uk-form-controls">
-                                <h:selectOneMenu styleClass="uk-select uk-form-width-medium" id="form-ClaseGlosario" value="#{detalleActividadControlador.glosarioModelo.claseGlosarioModelo.clave}">
-                                    <f:selectItems value="#{detalleActividadControlador.claseGlosarioModeloLista}"
-                                                    var="claseLista"
-                                                    itemLabel="#{claseLista.valor}"
-                                                    itemValue="#{claseLista.clave}"/>
-                                    <f:validateRequired/>
-                                </h:selectOneMenu>
-                            </div>
-                        </div>
-                        <div class="uk-width-1-1">
-                            <label class="uk-form-label" for="form-Palabra">Palabra</label>
-                            <div class="uk-form-controls">
-                                <h:inputText styleClass="uk-input" id="form-Palabra" value="#{detalleActividadControlador.glosarioModelo.palabra}">
-                                    <f:validateRequired/>
-                                    <f:validateLength minimum="2" maximum="20"/>
-                                </h:inputText>
-                            </div>
-                        </div>
-                        <div class="uk-width-1-1">
-                            <div class="uk-margin">
-                                <label class="uk-form-label" for="form-significado">Significado</label>
+                <h:form styleClass="uk-form-stacked">
+                    <div class="uk-modal-body " uk-grid="" >
+<!--                        <h:panelGroup layout="block" styleClass="uk-grid" pt:uk-grid="">-->
+
+                           <div class="uk-width-1-2">
+                                   <div class="margen-imagen-cargar">
+                                       <h:inputFile   id="file-glosario" styleClass="inputfile inputfile-glosario" pt:data-multiple-caption="{count} files selected" pt:multiple="" value="#{detalleActividadControlador.glosarioModelo.imagen}" />
+                                       <h:outputLabel for="file-glosario"><span/> <strong>Cargar..</strong></h:outputLabel>
+                                   </div>
+
+                           </div>
+                            <div class="uk-width-1-2">
+                                <label class="uk-form-label" for="form-ClaseGlosario">Clase Glosario</label>
                                 <div class="uk-form-controls">
-                                    <h:inputTextarea styleClass="uk-textarea" rows="5" id="form-significado" pt:placeholder="Signicado"  value="#{detalleActividadControlador.glosarioModelo.significado}">
+                                    <h:selectOneMenu styleClass="uk-select uk-form-width-medium" id="form-ClaseGlosario" value="#{detalleActividadControlador.glosarioModelo.claseGlosarioModelo.clave}">
+                                        <f:selectItems value="#{detalleActividadControlador.claseGlosarioModeloLista}"
+                                                        var="claseLista"
+                                                        itemLabel="#{claseLista.valor}"
+                                                        itemValue="#{claseLista.clave}"/>
                                         <f:validateRequired/>
-                                        <f:validateLength maximum="300"/>
-                                    </h:inputTextarea>
+                                    </h:selectOneMenu>
                                 </div>
                             </div>
-                        </div>
+                            <div class="uk-width-1-1">
+                                <label class="uk-form-label" for="form-Palabra">Palabra</label>
+                                <div class="uk-form-controls">
+                                    <h:inputText styleClass="uk-input" id="form-Palabra" value="#{detalleActividadControlador.glosarioModelo.palabra}">
+                                        <f:validateRequired/>
+                                        <f:validateLength minimum="2" maximum="20"/>
+                                    </h:inputText>
+                                </div>
+                            </div>
+                            <div class="uk-width-1-1">
+                                <div class="uk-margin">
+                                    <label class="uk-form-label" for="form-significado">Significado</label>
+                                    <div class="uk-form-controls">
+                                        <h:inputTextarea styleClass="uk-textarea" rows="5" id="form-significado" pt:placeholder="Signicado"  value="#{detalleActividadControlador.glosarioModelo.significado}">
+                                            <f:validateRequired/>
+                                            <f:validateLength maximum="300"/>
+                                        </h:inputTextarea>
+                                    </div>
+                                </div>
+                            </div>
 
-                    </h:panelGroup>
-                </div>
-                <div class="uk-modal-footer">
-                    <h:commandButton styleClass="uk-button uk-button-primary" value="Agregar" >
-                        <f:ajax execute="@form" listener="#{detalleActividadControlador.agregaGlosario}" render="@form"/>
-                    </h:commandButton>
-                </div>
-            </h:form>
+<!--                        </h:panelGroup>-->
+                    </div>
+                    <div class="uk-modal-footer">
+                        <h:commandButton styleClass="uk-button uk-button-primary" value="Agregar" >
+                            <f:ajax execute="@form" listener="#{detalleActividadControlador.agregaGlosario}" render="@form"/>
+                        </h:commandButton>
+                    </div>
+                </h:form>
+
         </div>
     </h:panelGroup>
     <h:outputScript library="js" name="uikit.js"/>
     <h:outputScript library="js" name="uikit-icons.js"/>
+    <h:outputScript library="js" name="/colaborador/custom-file-input.js"/>
+
 </h:body>
 </html>
