--- a/tecolotl-web/src/main/webapp/colaborador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/colaborador/dashboard.xhtml
@@ -20,6 +20,7 @@
     <h:outputStylesheet library="css" name="uikit.css"/>
     <h:outputStylesheet library="css" name="tablas.css"/>
     <h:outputStylesheet library="css" name="colaborador/actividad.css"/>
+
 </h:head>
 
 <h:body>
@@ -106,14 +107,14 @@
             <div class="uk-modal-header">
                 <h2 class="uk-modal-title">Actividad</h2>
             </div>
-            <h:form styleClass="uk-form-stacked">
+            <h:form method="post" styleClass="uk-form-stacked">
                 <div class="uk-modal-body">
 
                     <div class="uk-grid" uk-grid="">
                         <div class="uk-width-1-3">
                             <label class="uk-form-label" for="form-IdVideo">ID Video</label>
                             <div class="uk-form-controls">
-                                <h:inputText styleClass="uk-input uk-form-width-small" id="form-IdVideo" pt:placeholder="ID Video" value="#{colaboradorDashboardControlador.actividadModelo.idVideo}">
+                                <h:inputText styleClass="uk-input uk-form-width-small" id="form-IdVideo" pt:placeholder="ID Video" value="#{colaboradorDashboardControlador.actividadModelo.idVideo}" binding="#{colaboradorDashboardControlador.htmlInputText}">
                                     <f:validateRequired/>
                                     <f:validateLength minimum="11" maximum="11"/>
                                 </h:inputText>
@@ -204,17 +205,27 @@
                     <div class="uk-margin">
                         <label class="uk-form-label" for="form-Transcript">Transcript</label>
                         <div class="uk-form-controls">
-                            <h:inputTextarea styleClass="uk-textarea" rows="20" id="form-Transcript" pt:placeholder="Transcript here, please" value="#{colaboradorDashboardControlador.actividadModelo.transcripcion}">
+                            <h:inputTextarea styleClass="uk-textarea" rows="30" id="form-Transcript"  value="#{colaboradorDashboardControlador.actividadModelo.transcripcion}">
                                 <f:validateRequired/>
                                 <f:validateLength minimum="2"/>
                             </h:inputTextarea>
                         </div>
+                        <script type="application/javascript" src="https://cdn.tiny.cloud/1/pga2ysw820w1p9z2gngkq4t7i6h7u3x91f57ow2jnijljbue/tinymce/5/tinymce.min.js"></script>
+                        <script type="application/javascript">
+                            tinymce.init({selector: 'textarea'});
+                            function llena(){
+                                tinymce.get('form-Transcript').getContent();
+                            }
+                        </script>
                         <h:message for="form-Transcript" styleClass="uk-text-danger"/>
                     </div>
                 </div>
                 <div class="uk-modal-footer uk-text-right">
                     <h:commandButton styleClass="uk-button uk-button-primary" value="Agregar" >
-                        <f:ajax execute="@form" listener="#{colaboradorDashboardControlador.agregarActividad}" render="@form"/>
+                        <f:ajax execute="@form" listener="#{colaboradorDashboardControlador.agregarActividad}" render="@form tabla-actividades"  onevent="function f(data) {
+                          console.log(data);
+                          llena();
+                        }"/>
                     </h:commandButton>
                 </div>
             </h:form>
