--- a/tecolotl-web/src/main/webapp/colaborador/detalle-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/colaborador/detalle-actividad.xhtml
@@ -16,6 +16,11 @@
     <h:outputStylesheet library="css" name="/colaborador/glosario.css"/>
 </h:head>
 
+<f:metadata>
+    <f:viewParam name="video" value="#{relacionarGlosarioActividad.idActividad}"/>
+    <f:viewParam name="video" value="#{detalleActividadControlador.video}"/>
+</f:metadata>
+
 <h:body>
     <div class="uk-container uk-margin-medium-top">
         <h:panelGroup layout="block" styleClass="uk-child-width-1-2@m uk-grid" pt:uk-grid="">
@@ -76,7 +81,7 @@
                         </h:column>
                     </h:dataTable>
                     <button class="uk-button uk-button-small uk-button-primary" uk-toggle="target: #modal-glosario">Agregar</button>
-                    <button class="uk-button uk-button-small uk-button-primary">Existente</button>
+                    <button class="uk-button uk-button-small uk-button-primary" uk-toggle="target: #modal-relacionar-glosario">Existente</button>
                 </div>
             </div>
             <div>
@@ -87,6 +92,7 @@
             </div>
 
         </h:panelGroup>
+
     </div>
 
     <h:panelGroup layout="block" id="modal-glosario" pt:uk-modal="">
@@ -152,6 +158,79 @@
                     </div>
                 </h:form>
 
+        </div>
+    </h:panelGroup>
+    <h:panelGroup layout="block" id="modal-relacionar-glosario"  pt:uk-modal="">
+        <div class="uk-modal-dialog">
+            <button class="uk-modal-close-default" type="button" uk-close=""/>
+            <div class="uk-modal-header">
+                <h2 class="uk-modal-title">Nuevo Glosario</h2>
+            </div>
+            <h:form styleClass="uk-form-stacked" id="formulario-relacionar-glosario">
+                <div class="uk-modal-body">
+                    <h:panelGroup layout="block" styleClass="uk-grid" pt:uk-grid="">
+                        <div class="uk-width-2-3">
+                            <h:outputLabel value="Palabra" for="glosario-palabra"/>
+                            <div class="uk-form-controls">
+                                <h:inputText id="glosario-palabra"
+                                             value="#{relacionarGlosarioActividad.palabra}"
+                                             styleClass="uk-input">
+                                    <f:validateRequired/>
+                                    <f:validateLength minimum="1" maximum="20"/>
+                                </h:inputText>
+                            </div>
+                        </div>
+                        <div class="uk-width-1-3 uk-flex uk-flex-bottom">
+                            <h:commandButton styleClass="uk-button uk-button-secondary" value="Buscar">
+                                <f:ajax execute="@form"
+                                        render="@form"
+                                        listener="#{relacionarGlosarioActividad.busca}"/>
+                            </h:commandButton>
+                        </div>
+                        <div class="uk-width-1-1">
+                            <ui:fragment rendered="#{empty relacionarGlosarioActividad.glosarioModeloLista}">
+                                <table class="uk-table uk-table-middle">
+                                    <thead class="uk-background-primary letra-titulo ">
+                                    <tr>
+                                        <th><span class="letra-titulo  uk-text-bold uk-text-center">Palabra</span></th>
+                                        <th><span class="letra-titulo uk-text-bold uk-text-center ">Clase Palabra</span></th>
+                                        <th><span class="letra-titulo uk-text-bold uk-text-center ">Significado</span></th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td colspan="2">
+                                            <div class="uk-flex uk-flex-center">
+                                                <h:graphicImage library="img" name="vacio.svg" height="auto" width="auto" alt="vacio"/>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </ui:fragment>
+                            <h:dataTable id="tabla-glosario-relacionar"
+                                         value="#{relacionarGlosarioActividad.glosarioModeloLista}"
+                                         var="glosario"
+                                         rendered="#{not empty relacionarGlosarioActividad.glosarioModeloLista}">
+                                <h:column>
+                                    <f:facet name="header">Palabra</f:facet>#{glosario.palabra}
+                                </h:column>
+                                <h:column>
+                                    <f:facet name="header">Clase Glosario</f:facet>#{glosario.claseGlosarioModelo.valor}
+                                </h:column>
+                                <h:column>
+                                    <f:facet name="header">Significado</f:facet>#{glosario.significado}
+                                </h:column>
+                            </h:dataTable>
+                        </div>
+                    </h:panelGroup>
+                </div>
+                <div class="uk-modal-footer">
+                    <h:commandButton styleClass="uk-button uk-button-primary" value="Agregar">
+                        <f:ajax/>
+                    </h:commandButton>
+                </div>
+            </h:form>
         </div>
     </h:panelGroup>
     <h:outputScript library="js" name="uikit.js"/>
